--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,118 @@
-.App {
-  text-align: center;
+body {
+    margin: 0;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
+        'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+        sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+code {
+    font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+        monospace;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+
+html,
+body {
+    background-color: #FEFAE0;
+    height: 100vh;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+#root {
+    display: block;
+    position: absolute;
+    height: auto;
+    bottom: 0;
+    top: 0;
+    left: 0;
+    right: 0;
+    margin-top: 20px;
+    margin-bottom: 80px;
+    margin-right: 30px;
+    margin-left: 30px;
 }
 
-.App-link {
-  color: #61dafb;
+.main {
+    display: grid;
+    grid-template-areas:
+        'header'
+        'content'
+        'content'
+        'content'
+        'content'
+        'content'
+        'content'
+        'content'
+        'footer';
+    gap: 5%;
+    height: 100%;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.main>div {
+    text-align: center;
+    font-size: 30px;
+}
+
+.header {
+    grid-area: header;
+    background-color: #E9EDC9;
+}
+
+.content {
+    grid-area: content;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: auto;
+    height: auto;
+}
+
+.game-field {
+    display: grid;
+    background-color: #E9EDC9;
+    grid-template-columns: repeat(8, 65pt);
+    grid-template-rows: repeat(8, 56pt);
+}
+
+.footer {
+    grid-area: footer;
+    background-color: #E9EDC9;
+}
+
+.square {
+    width: 50pt;
+    height: 50pt;
+    margin: 5pt;
+    background-color: #FAEDCD;
+    display: flex;
+    font-weight: bold;
+    font-size: larger;
+    color: rgb(94, 94, 94);
+    justify-content: center;
+    align-items: center;
+    box-shadow: 2px 2px 2px 1px rgba(0, 0, 0, 0.181), inset 10px 10px 20px #00000017;
+}
+
+.square:hover {
+    transition-duration: 0.5s;
+    filter: brightness(70%);
+    /* background-color: #D4A373; */
+}
+
+.square:active {
+    background-color: #f4cba3;
+    box-shadow: 5px 5px 5px #666;
+    /* transform: translateY(4px); */
+    transform: scale();
+}
+
+
+.square-active {
+    transition-duration: 0.5s;
+    background-color: #a1e2ee;
+}
+
+.no-click {
+    pointer-events: none;
 }
